[tool.poetry]
name = "fcc-scp"
version = "0.1.0"
description = "freecodecamp Scientific Computing with Python"
license = "MIT"
authors = ["AABur <aabur@mail.ru>"]
readme = "README.md"
repository = "https://github.com/AABur/fcc-scp"
packages = [
    { include = "fcc_scp" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
wemake-python-styleguide = "^0.16.1"
pyformat = "^0.7"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
isort = "^5.10.1"
pytest-sugar = "^0.9.5"
pytest-clarity = "^1.0.1"

[tool.poetry.scripts]
hexlet-python-package = "fcc_scp.scripts.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
